--- a/웹/브라우저동작순서.md
+++ b/웹/브라우저동작순서.md
@@ -16,3 +16,31 @@ JS 코드 파싱이 완료가 되면 다시 html 파싱 작업을 하여 완료 
 그 뒤 DOM과 CSSOM 트리가 합쳐져 Render Tree를 만들고 이 렌더링 트리에서 노드들을 배치하고
  UI를 그려 사용자에게 결과 화면을 출력시킨다.
 ```
+```
+사용자가 웹 브라우저를 통해 찾고 싶은 웹 페이지의 URL 주소를 입력합니다.
+
+사용자가 입력한 URL 주소 중에서 도메인 네임(domain name) 부분을 DNS 서버에서 검색합니다.
+
+DNS 서버에서 해당 도메인 네임에 해당하는 IP 주소를 찾아 사용자가 입력한 URL 정보와 함께 전달합니다.
+
+⑤웹 페이지 URL 정보와 전달받은 IP 주소는 HTTP 프로토콜을 사용하여 HTTP 요청 메시지를 생성합니다.
+
+이렇게 생성된 HTTP 요청 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 해당 IP 주소의 컴퓨터로 전송됨.
+
+이렇게 도착한 HTTP 요청 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환됩니다.
+
+HTTP Request를 위해 TCP Socket을 개방하고 연결합니다.
+이 과정에서 3-way hand shaking이 일어납니다.
+TCP 연결에 성공하면, HTTP Request가 TCP Socket을 통해 보내집니다.
+이에 대한 응답으로 웹 페이지의 정보가 사용자의 PC로 들어옵니다.
+
+웹 서버는 도착한 웹 페이지 URL 정보에 해당하는 데이터를 검색합니다.
+
+검색된 웹 페이지 데이터는 또다시 HTTP 프로토콜을 사용하여 HTTP 응답 메시지를 생성합니다.
+
+이렇게 생성된 HTTP 응답 메시지는 TCP 프로토콜을 사용하여 인터넷을 거쳐 원래 컴퓨터로 전송됩니다.
+
+도착한 HTTP 응답 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 데이터로 변환됩니다.
+
+변환된 웹 페이지 데이터는 웹 브라우저에 의해 출력되어 사용자가 볼 수 있게 됩니다.
+```
