--- a/스프링/JPA/N더하기1.md
+++ b/스프링/JPA/N더하기1.md
@@ -35,3 +35,10 @@ private Address address;
 (*영속성 컨텍스트 : 엔티티를 영구 저장 하는 환경)
 
 powered by 실전 스프링 부트와 JPA 활용2 강의 노트중 일부
+
+
+추가설명
+```
+jpaRepository에 정의한 인터페이스 메서드를 실행하면 JPA는 메서드 이름을 분석해서 JPQL을 생성하여 실행하게 된다. JPQL은 SQL을 추상화한 객체지향 쿼리 언어로서 특정 SQL에 종속되지 않고 엔티티 객체와 필드 이름을 가지고 쿼리를 한다. 그렇기 때문에 JPQL은 findAll()이란 메소드를 수행하였을 때 해당 엔티티를 조회하는 select * from Owner 쿼리만 실행하게 되는것이다. JPQL 입장에서는 연관관계 데이터를 무시하고 해당 엔티티 기준으로 쿼리를 조회하기 때문이다. 
+```
+ref : https://incheol-jung.gitbook.io/docs/q-and-a/spring/n+1
