이미지 추가

--- a/DB/격리수준.md
+++ b/DB/격리수준.md
@@ -5,6 +5,7 @@
 
 우리가 동시성 제어를 하기 위해서 Lock을 건다. 효율적인 Locking 방법이 요구된다. 
 
+
 Leve0
 1. Read Uncommitted - 0
 select 수행되는 동안 해당 데이터에 Shared Lock 이 걸리지 않음
@@ -39,6 +40,8 @@ Non-Repeatable Read 부정합이 발생하지 않는다.
 --> 중요한 사실은 InnoDB의 트랜잭션은 순차적으로 증가하는 고유한 트랜잭션 번호를 가지고 있다. 그래서 undo 영역만 보기 때문에 자신의 트랜잭션 번호보다 낮은 트랜잭션 번호에서 변경된 것만 본다. 
 
 Phantom Read 발생
+한 트랜잭션 안에서 일정 범위의 레코드를 두 번 이상 읽었을 때 첫번째 쿼리에 없던 레코드가 두번째 쿼리에서 나타나는 현상 (중간에 레코드 삽입을 허용하기 때문이다.)
+
 
 Level3
 Serializable - 3
